fixed enter a dept and styling issues on IE

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -169,6 +169,10 @@ body {
 nav > .container {
 	margin-bottom: 0;
 }
+
+.navbar-brand {
+	padding-left: 0;
+}
 .navbar-brand > img,
 .proposals-header {
     display: inline-block;
